// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/StepperItem should render successfully 1`] = `
<div
  class="wrapper-0-2-1 wrapper-d0-0-2-2 item item__current"
  role="listitem"
>
  <div
    class="container"
  >
    <span
      class="icon"
    >
      2
    </span>
    <div
      class="content"
    >
      <span
        class="title"
      >
        Test
         
        <span
          class="subtitle"
        />
      </span>
      <span
        class="description"
      />
    </div>
  </div>
</div>
`;

exports[`Components/StepperItem should render successfully when is past 1`] = `
<div
  class="wrapper-0-2-1 wrapper-d1-0-2-3 item item__current item__past"
  role="listitem"
>
  <div
    class="container"
  >
    <span
      class="icon"
    >
      <span
        class="jsx-1118668747 icon material-icons"
        role="img"
      >
        check
      </span>
    </span>
    <div
      class="content"
    >
      <span
        class="title"
      >
        Test
         
        <span
          class="subtitle"
        />
      </span>
      <span
        class="description"
      />
    </div>
  </div>
</div>
`;
